tests/ShouldFail/bad_intro.8pus
Theorem easyimpl : forall A : Type, A -> A.
Proof.
    intro a.
    intro x.
    intro y.
Qed.
